--- a/Responsive Web Design(NEW)/3 Registration Form/3 Registration form.html
+++ b/Responsive Web Design(NEW)/3 Registration Form/3 Registration form.html
@@ -34,3 +34,36 @@ form {
   width: 60vw;
 }
 
+
+<!-- Step 40
+During development, it is useful to see the fieldset default borders. However, they make the content appear too separated.
+
+Remove the border, and add 2rem of padding only to the top and bottom of each fieldset. Be sure to remove the padding from the left and right. -->
+
+fieldset {
+  border: 0;
+  padding: 2rem 0;
+}
+
+
+<!-- Step 41
+To give the fieldset elements a bit of separation, select all but the last fieldset element, and give them a border-bottom of 3px solid #3b3b4f. -->
+
+fieldset:not(:last-of-type) {
+  border-bottom: 3px solid #3b3b4f;
+}
+
+
+<!-- Step 42
+It would be nicer to have the label text appear above the form elements.
+
+Select all input, textarea, and select elements, and make them take up the full width of their parent elements.
+
+Also, add 10px of margin to the top of the selected elements. Set the other margins to 0. -->
+
+input, textarea, select {
+  width: 100%;
+  margin: 10px 0 0 0;
+}
+
+
