--- a/Responsive Web Design(NEW)/3 Registration Form/3 Registration form.html
+++ b/Responsive Web Design(NEW)/3 Registration Form/3 Registration form.html
@@ -67,3 +67,56 @@ input, textarea, select {
 }
 
 
+<!-- Step 43
+For the second fieldset, you want the input and label text to appear on the same line.
+
+Start, by giving the input elements in the second fieldset a class of inline. -->
+
+      <fieldset>
+        <label><input class="inline" type="radio" name="account-type" /> Personal Account</label>
+        <label><input class="inline" type="radio" name="account-type" /> Business Account</label>
+        <label>
+          <input class="inline" type="checkbox" name="terms" required /> 
+		I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+	</label>
+      </fieldset>
+
+
+<!-- Step 44
+Select only the .inline elements, and give them width of unset. This will remove the earlier rule which set all the input elements to width: 100%. -->
+
+.inline {
+  width: unset;
+}
+
+
+<!-- Step 45
+Add some space between the .inline elements and the label text, by giving a right margin of 0.5em. Also, set all the other margin to 0. -->
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+}
+
+<!-- Step 46
+If you look close enough, you will notice the .inline elements are too high on the line.
+
+To combat this, set the vertical-align property to middle. -->
+
+.inline {
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
+
+<!-- Step 47
+To make the input and textarea elements blend in with the background theme, set their background-color to #0a0a23. 
+Then, give them a 1px, solid border with a color of #0a0a23. -->
+
+input, textarea {
+  background-color: #0a0a23;
+  border: 1px solid #0a0a23;
+}
+
+
