--- a/Responsive Web Design(NEW)/3 Registration Form/3 Registration form.html
+++ b/Responsive Web Design(NEW)/3 Registration Form/3 Registration form.html
@@ -167,3 +167,70 @@ input[type="submit"] {
 }
 
 
+<!-- Step 51
+With a display of block the submit button sits flush against the left edge of its parent.
+
+Use the same technique used to center the form to center the submit button. -->
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+}
+
+
+<!-- Step 52
+To make the submit button look more in line with the rest of the form, give it the same height as the other fields (2em). Also, increase the font-size to 1.1rem. -->
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  height: 2em;
+  font-size: 1.1rem
+}
+
+
+<!-- Step 53
+To make the submit button appear more distinct, give it a background-color of #3b3b4f, and a border-color of white. -->
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #3b3b4f;
+  border-color: white;
+}
+
+
+<!-- Step 54
+Lastly, for the submit button, you want to separate it from the fieldset above, and adjust its width to never be below 300px.
+
+Change the margin property to include 1em on the top and bottom, and set the width as described above. -->
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #3b3b4f;
+  border-color: white;
+  min-width: 300px;  
+}
+
+
+<!-- Step 55
+Most browsers inject their own default CSS properties and values for different elements. 
+If you look closely, you might be able to notice the file input is smaller than the other text input elements. 
+By default, a padding of 1px 2px is given to input elements you can type in.
+
+Using another attribute selector, style the input with a type of file to be the same padding as the other input elements. -->
+
+input[type="file"] {
+  padding: 1px 2px;
+}
+
+
