--- a/Responsive Web Design(NEW)/3 Registration Form/3 Registration form.html
+++ b/Responsive Web Design(NEW)/3 Registration Form/3 Registration form.html
@@ -234,3 +234,24 @@ input[type="file"] {
 }
 
 
+<!-- Step 56
+Speaking of padding, the submit button is sitting at the bottom of the form element. Add 2em of padding only to the bottom of the form. -->
+
+form {
+  width: 60vw;
+	max-width: 500px;
+	min-width: 300px;
+	margin: 0 auto;
+  padding: 0 0 2em 0;
+}
+
+
+<!-- Step 57
+Last, but not least, change the text color of the terms and conditions link to #dfdfe2.
+
+Well done! You have completed the final part of the Registration Form practice project. -->
+
+a {
+  color: #dfdfe2;
+}
+
