--- a/Responsive Web Design(NEW)/4 Survey Form/index.html
+++ b/Responsive Web Design(NEW)/4 Survey Form/index.html
@@ -6,5 +6,11 @@
   </head>
   <body>
     <h1 id="title">Survey Form</h1>
+    <p id="description">Please fill out this form with the required information</p>
+    <form id="survey-form">
+      <fieldset>
+        <label>Enter your name: <input />
+      </fieldset>
+    </form>
   </body>
 </html>
