--- a/Responsive Web Design(NEW)/4 Survey Form/index.html
+++ b/Responsive Web Design(NEW)/4 Survey Form/index.html
@@ -9,7 +9,8 @@
     <p id="description">Please fill out this form with the required information</p>
     <form id="survey-form">
       <fieldset>
-        <label>Enter your name: <input />
+        <label>Enter your name: <input id="name" type="text" required /></label>
+        <label>Enter your email: <input id="email" type="email" required /></label>
       </fieldset>
     </form>
   </body>
