--- a/Responsive Web Design(NEW)/4 Survey Form/index.html
+++ b/Responsive Web Design(NEW)/4 Survey Form/index.html
@@ -11,6 +11,7 @@
       <fieldset>
         <label>Enter your name: <input id="name" type="text" required /></label>
         <label>Enter your email: <input id="email" type="email" required /></label>
+        <label>Enter your ID: <input id="number" type="number" min="1" max="20" required /></label>
       </fieldset>
     </form>
   </body>
