--- a/Responsive Web Design(NEW)/4 Survey Form/index.html
+++ b/Responsive Web Design(NEW)/4 Survey Form/index.html
@@ -9,9 +9,9 @@
     <p id="description">Please fill out this form with the required information</p>
     <form id="survey-form">
       <fieldset>
-        <label>Enter your name: <input id="name" type="text" required /></label>
-        <label>Enter your email: <input id="email" type="email" required /></label>
-        <label>Enter your ID: <input id="number" type="number" min="1" max="20" required /></label>
+        <label id="name-label">Enter your name: <input id="name" type="text" required placeholder="My name is..." /></label>
+        <label id="email-label">Enter your email: <input id="email" type="email" required placeholder="My email is..." /></label>
+        <label id="number-label">Enter your ID: <input id="number" type="number" min="1" max="20" required placeholder="My ID is..." /></label>
       </fieldset>
     </form>
   </body>
