--- a/Responsive Web Design(NEW)/4 Survey Form/index.html
+++ b/Responsive Web Design(NEW)/4 Survey Form/index.html
@@ -13,6 +13,16 @@
         <label id="email-label">Enter your email: <input id="email" type="email" required placeholder="My email is..." /></label>
         <label id="number-label">Enter your ID: <input id="number" type="number" min="1" max="20" required placeholder="My ID is..." /></label>
       </fieldset>
+      <fieldset>
+        <label>How are you today?
+          <select id="dropdown">
+            <option>(select one)</option>
+            <option>Good</option>
+            <option>Quite well</option>
+            <option>Well</option>
+          </select>
+        </label>
+      </fieldset>
     </form>
   </body>
 </html>
