--- a/Responsive Web Design(NEW)/4 Survey Form/index.html
+++ b/Responsive Web Design(NEW)/4 Survey Form/index.html
@@ -23,6 +23,14 @@
           </select>
         </label>
       </fieldset>
+      <fieldset>
+        <label>
+          <input type="radio" name="like-counter" value="1">Like
+        </label>
+        <label>
+          <input type="radio" name="like-counter" value="0">Dislike
+        </label>
+      </fieldset>
     </form>
   </body>
 </html>
