--- a/Responsive Web Design(NEW)/4 Survey Form/index.html
+++ b/Responsive Web Design(NEW)/4 Survey Form/index.html
@@ -24,12 +24,17 @@
         </label>
       </fieldset>
       <fieldset>
+        <label>Do you like our content?</label>
         <label>
           <input type="radio" name="like-counter" value="1">Like
         </label>
         <label>
           <input type="radio" name="like-counter" value="0">Dislike
         </label>
+      </fieldset>
+      <fieldset>
+        <label><input type="checkbox" value="subscribe">Subscribe me!</label>
+        <label><input type="checkbox" value="newsletter">Receive newsletter</label>
       </fieldset>
     </form>
   </body>
