Add text area and submit button

--- a/Responsive Web Design(NEW)/4 Survey Form/index.html
+++ b/Responsive Web Design(NEW)/4 Survey Form/index.html
@@ -36,6 +36,8 @@
         <label><input type="checkbox" value="subscribe">Subscribe me!</label>
         <label><input type="checkbox" value="newsletter">Receive newsletter</label>
       </fieldset>
+      <label>Comment: <textarea name="comment" placeholder="Comment please.."></textarea></label>
+      <button id="submit" type="submit">Submit!</button>
     </form>
   </body>
 </html>
