Update 1 Box model.html

--- a/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/1 Box model.html
+++ b/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/1 Box model.html
@@ -132,3 +132,38 @@ This will move the frame down 20 pixels and horizontally center it on the page. 
 
 margin: 20px auto;
 
+
+<!-- Step 16
+Add a new div element inside of your .canvas element.
+Give the new div the class attribute with a value of one. This will be your first rectangle. -->
+
+<div class="one"></div>
+
+
+<!-- Step 17
+Write a new rule that targets .one and set its width to 425 pixels. -->
+
+.one {
+  width: 425px;
+}
+
+
+<!-- Step 18
+Now set the height for .one to 150 pixels. -->
+
+height: 150px;
+
+
+<!-- Step 19
+Set the background-color of .one to #efb762. -->
+
+background-color: #efb762;
+
+
+<!-- Step 20
+Use margins to position the .one element on the canvas.
+Add the shorthand margin property with a vertical margin of 20px and a horizontal margin of auto. -->
+
+margin: 20px auto;
+
+
