Update 1 Box model.html

--- a/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/1 Box model.html
+++ b/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/1 Box model.html
@@ -201,3 +201,13 @@ Set the height of the .two element to 200 pixels. -->
 height: 200px;
 
 
+<!-- Step 26
+Set the background-color of the .two element to #8f0401. -->
+
+background-color: #8f0401;
+
+
+<!-- Step 27
+Center the .two element by setting its margin to auto. -->
+
+margin: auto;
