Update 2 Box model.html

--- a/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/2 Box model.html
+++ b/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/2 Box model.html
@@ -4,3 +4,30 @@ Create a new div with a class value of three right under the .two element. This 
 <div class="three"></div>
 
 
+<!-- Step 29
+You don't always have to use pixels when sizing an element.
+Create a new rule, .three, and set its width to 91%. -->
+
+.three {
+  width: 91%;
+}
+
+
+<!-- Step 30
+Set the height of .three to 28%. -->
+
+height: 28%;
+
+
+<!-- Step 31
+Change the background-color of .three to #b20403. -->
+
+background-color: #b20403;
+
+
+<!-- Step 32
+Center the .three element on the canvas by setting its margin to auto. -->
+
+margin: auto;
+
+
