--- a/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/2 Box model.html
+++ b/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/2 Box model.html
@@ -31,3 +31,33 @@ Center the .three element on the canvas by setting its margin to auto. -->
 margin: auto;
 
 
+<!-- Step 33
+It's helpful to have your margins push in one direction.
+In this case, the bottom margin of the .one element pushes .two down 20 pixels.
+
+In the .two selector, use margin shorthand property to set top margin to 0, horizontal margin to auto, and bottom margin to 20px. 
+This will remove its top margin, horizontally center it, and set its bottom margin to 20 pixels. -->
+
+  margin: 0 auto 20px;
+
+
+<!-- Step 34
+The colors and shapes of your painting are too sharp to pass as a Rothko.
+Use the filter property to blur the painting by 2px in the .canvas element. -->
+
+filter: blur(2px);
+
+
+<!-- Step 35
+Create a rule that targets both .one and .two and increase their blur effect by 1 pixel. -->
+
+.one, .two {
+  filter: blur(1px);
+}
+
+
+<!-- Step 36
+Increase the blur of .three by 2 pixels. -->
+
+filter: blur(2px);
+
