--- a/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/2 Box model.html
+++ b/Responsive Web Design(NEW)/5 CSS Box Model by Building a Rothko Painting/2 Box model.html
@@ -88,3 +88,34 @@ Round each corner of the .one element by 9 pixels, using the border-radius prope
 border-radius: 9px;
 
 
+<!-- Step 41
+Use the border-radius property on the .two selector, to set its top-left and bottom-right radii to 8px, and top-right and bottom-left radii to 10px. -->
+
+border-radius: 8px 10px;
+
+
+<!-- Step 42
+The border-radius property accepts up to four values to round the top-left, top-right, bottom-right, and bottom-left corners.
+Round the top-left corner of .three by 30 pixels, the top-right by 25 pixels, the bottom-right by 60 pixels, and bottom-left by 12 pixels. -->
+
+border-radius: 30px 25px 60px 12px;
+
+
+<!-- Step 43
+Rotate each rectangle to give them more of an imperfect, hand-painted look.
+Use the transform property on the .one selector to rotate it counter clockwise by 0.6 degrees. -->
+
+transform: rotate(-0.6deg);
+
+
+<!-- Step 44
+Rotate the .two element clockwise by 0.4 degrees. -->
+
+transform: rotate(0.4deg)
+
+
+<!-- Step 45
+Rotate .three counter clockwise by 0.2 degrees.
+With this final step, your Rothko painting is now complete. -->
+
+transform: rotate(-0.2deg);
