--- a/Responsive Web Design(NEW)/6 CSS Flexbox by Building a Photo Gallery/Flexbox 1.html
+++ b/Responsive Web Design(NEW)/6 CSS Flexbox by Building a Photo Gallery/Flexbox 1.html
@@ -180,3 +180,81 @@ To vertically center your images, give your #gallery selector an align-items pro
   align-items: center;
 }
 
+
+<!-- Step 16
+Give your #gallery selector a padding property set to 0 4px. -->
+
+#gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0 4px;
+}
+
+
+<!-- Step 17
+Notice how some of your images have become distorted. This is because the images have different aspect ratios. 
+Rather than setting each aspect ratio individually, you can use the object-fit property to determine how images should behave.
+
+Give your #gallery img selector the object-fit property and set it to cover. 
+This will tell the image to fill the img container while maintaining aspect ratio, resulting in cropping to fit. -->
+
+#gallery img {
+  width: 25%;
+  height: 300px;
+  object-fit: cover;
+}
+
+
+<!-- Step 18
+Your images need some space between them.
+Give your #gallery img selector a margin-top property of 8px and a padding property of 0 4px. -->
+
+#gallery img {
+  width: 25%;
+  height: 300px;
+  object-fit: cover;
+  margin-top: 8px;
+  padding: 0 4px;
+}
+
+
+<!-- Step 19
+Smooth out your images a bit by giving the #gallery img selector a border-radius property of 10px. -->
+
+#gallery img {
+  width: 25%;
+  height: 300px;
+  object-fit: cover;
+  margin-top: 8px;
+  padding: 0 4px;
+  border-radius: 10px;
+}
+
+
+<!-- Step 20
+Create a media query for screens smaller than 800px in width. In that media query, create a #gallery img rule and set the width property to 50%. 
+This will convert your gallery to a two-column layout. -->
+
+@media (max-width: 800px) {
+  #gallery img {
+    width: 50%;
+  }
+}
+
+
+<!-- Step 21
+Resize the preview to see the layout change from your media query.
+
+Finally, create another media query for screens smaller than 600px wide. 
+In that media query, create a #gallery img rule and set the width property to 100%. This will give your gallery a single-column layout.
+
+Your CSS Flexbox Photo Gallery is now complete. -->
+
+@media (max-width: 600px) {
+  #gallery img {
+    width: 100%;
+  }
+}
