--- a/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/Typography.html
+++ b/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/Typography.html
@@ -57,3 +57,72 @@ body {
 }
 
 
+<!-- Step 6
+The font is a bit small. Create an html selector and set the font to have a size of 16px. -->
+
+html {
+  font-size: 16px;
+}
+
+
+<!-- Step 7
+Wrap your h1 and p elements in a div element. Give that div a class attribute set to label. -->
+
+  <body>
+    <div class="label">
+      <h1>Nutrition Facts</h1>
+      <p>8 servings per container</p>
+      <p>Serving size 2/3 cup (55g)</p>
+    </div>
+  </body>
+
+
+<!-- Step 8
+Borders can be used to group and prioritize content.
+Create a .label selector and give it a border set to 2px solid black. -->
+
+.label {
+  border: 2px solid black;
+}
+
+
+<!-- Step 9
+Good use of white space can bring focus to the important elements of your page, and help guide your user's eyes through your text.
+Give your .label selector a width property set to 270px. -->
+
+.label {
+  border: 2px solid black;
+  width: 270px;
+}
+
+
+<!-- Step 10
+Give your .label selector a margin property set to 20px auto, and a padding property set to 0 7px. -->
+
+.label {
+  border: 2px solid black;
+  width: 270px;
+  margin: 20px auto;
+  padding: 0 7px;
+}
+
+
+<!-- Step 11
+If you inspect your .label element with your browser's developer tools, you may notice that it's actually 288 pixels wide instead of 270. 
+This is because, by default, the browser includes the border and padding when determining an element's size.
+To solve this, reset the box model by creating a * selector and giving it a box-sizing property of border-box. -->
+
+* {
+  box-sizing: border-box;
+}
+
+
+<!-- Step 12
+Remember that the use of h1, h2, and similar tags determine the semantic structure of your HTML. 
+However, you can adjust the CSS of these elements to control the visual flow and hierarchy.
+Create an h1 rule and set the font-weight property to 800. This will make your h1 text bolder. -->
+
+h1 {
+  font-weight: 800;
+}
+
