--- a/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/Typography.html
+++ b/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/Typography.html
@@ -126,3 +126,43 @@ h1 {
   font-weight: 800;
 }
 
+
+<!-- Step 13
+Give your h1 selector a text-align property of center. -->
+
+h1 {
+  font-weight: 800;
+  text-align: center;
+}
+
+
+<!-- Step 14
+Fine-tune the placement of your h1 by giving it a top and bottom margin of -4px and a left and right margin of 0. -->
+
+h1 {
+  font-weight: 800;
+  text-align: center;
+  margin: -4px 0;
+}
+
+
+<!-- Step 15
+Create a p selector and remove all margins. -->
+
+p {
+  margin: 0;
+}
+
+
+<!-- Step 16
+Lines can help separate and group important content, especially when space is limited.
+Create a div element below your h1 element, and give it a class attribute set to divider. -->
+
+    <div class="label">
+      <h1>Nutrition Facts</h1>
+      <div class="divider"></div>
+      <p>8 servings per container</p>
+      <p>Serving size 2/3 cup (55g)</p>
+    </div>
+
+
