--- a/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/Typography.html
+++ b/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/Typography.html
@@ -166,3 +166,81 @@ Create a div element below your h1 element, and give it a class attribute set to
     </div>
 
 
+<!-- Step 17
+Create a selector for your new .divider and set the border-bottom property to 1px solid #888989. 
+Also give it a top and bottom margin of 2px. It should not have any left or right margin. -->
+
+.divider {
+  border-bottom: 1px solid #888989;
+  margin: 2px 0;
+}
+
+
+<!-- Step 18
+The letter-spacing property can be used to adjust the space between each character of text in an element.
+Give your h1 selector a letter-spacing property set to 0.15px to space them out a bit more. -->
+
+h1 {
+  font-weight: 800;
+  text-align: center;
+  margin: -4px 0;
+  letter-spacing: 0.15px;
+}
+
+
+<!-- Step 19
+Nutrition labels have a lot of bold text to draw attention to important information. 
+Rather than targeting each element that needs to be bold, it is more efficient to use a class to apply the bold styling to every element.
+Give your second p element a class attribute set to bold. -->
+
+    <div class="label">
+      <p class="bold">Serving size 2/3 cup (55g)</p>
+    </div>
+
+
+<!-- Step 20
+Your new class does not have any styling yet. Create a .bold selector and give it a font-weight property set to 800 to make the text bold.
+Go ahead and remove the font-weight property from your h1 selector as well. -->
+
+h1 {
+  text-align: center;
+  margin: -4px 0;
+  letter-spacing: 0.15px;
+}
+
+.bold {
+  font-weight: 800;
+}
+
+
+<!-- Step 21
+Give your h1 element a class attribute set to bold. This will make the text bold again. -->
+
+    <div class="label">
+      <h1 class="bold">Nutrition Facts</h1>
+      <div class="divider"></div>
+      <p>8 servings per container</p>
+      <p class="bold">Serving size 2/3 cup (55g)</p>
+    </div>
+
+
+<!-- Step 22
+Horizontal spacing between equally important elements can increase the readability of your text.
+Wrap the text 2/3 cup (55g) in a span element, and give it a class attribute set to right. -->
+
+    <div class="label">
+      <h1 class="bold">Nutrition Facts</h1>
+      <div class="divider"></div>
+      <p>8 servings per container</p>
+      <p class="bold">Serving size <span class="right">2/3 cup (55g)</span></p>
+    </div>
+
+
+<!-- Step 23
+The float property is used to place an element on the left or right of its container, allowing other content (such as text) to wrap around it.
+Create a new .right selector and set the float property to right. -->
+
+.right {
+  float: right;
+}
+
