--- a/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/2 Typography.html
+++ b/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/2 Typography.html
@@ -21,3 +21,44 @@ header h1 {
 }
 
 
+<!-- Step 26
+Create a new div element below your header element, and give it a class attribute set to divider lg. -->
+
+<div class="divider lg"></div>
+
+
+<!-- Step 27
+Create a new .lg selector and give it a height property set to 10px. Also create an .lg, .md selector and set the background-color property to black. -->
+
+.lg {
+  height: 10px;  
+}
+
+.lg, .md {
+  background-color: black;
+}
+
+
+<!-- Step 28
+You may notice there is still a small border at the bottom of your .lg element. To reset this, give your .lg, .md selector a border property set to 0. -->
+
+.lg, .md {
+  background-color: black;
+  border: 0;
+}
+
+
+<!-- Step 29
+Create a new div below your .lg element and give it a class attribute set to calories-info. -->
+
+<div class="calories-info"></div>
+
+
+<!-- Step 30
+Within your .calories-info element, create a p element. Give that p element a class attribute set to bold sm-text, and the text Amount per serving. -->
+
+      <div class="calories-info">
+        <p class="bold sm-text">Amount per serving</p>
+      </div>
+
+
