--- a/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/2 Typography.html
+++ b/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/2 Typography.html
@@ -62,3 +62,47 @@ Within your .calories-info element, create a p element. Give that p element a cl
       </div>
 
 
+<!-- Step 31
+The rem unit stands for root em, and is relative to the font size of the html element.
+Create an .sm-text selector and set the font-size to 0.85rem, which would calculate to be roughly 13.6px 
+(remember that you set your html to have a font-size of 16px). -->
+
+.sm-text {
+  font-size: 0.85rem;
+}
+
+
+<!-- Step 32
+Below your .sm-text element, create a new h1 element with the text Calories 230. Wrap the 230 portion of the text in a span element with the class set to right. -->
+
+      <div class="calories-info">
+        <p class="bold sm-text">Amount per serving</p>
+        <h1>Calories <span class="right">230</span></h1>
+      </div>
+
+
+<!-- Step 33
+Create a new .calories-info h1 selector setting the top and bottom margin to -5px, and the left and right margin to -2px. -->
+
+.calories-info h1 {
+  margin: -5px -2px;
+}
+
+
+<!-- Step 34
+Create a .calories-info span selector and set the font-size to 1.2em. -->
+
+.calories-info span {
+  font-size: 1.2em;
+}
+
+
+<!-- Step 35
+The larger font size of the number 230 is causing it to overflow. Give the .calories-info h1 an overflow property set to hidden to avoid this. -->
+
+.calories-info h1 {
+  margin: -5px -2px;
+  overflow: hidden;
+}
+
+
