--- a/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/2 Typography.html
+++ b/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/2 Typography.html
@@ -149,3 +149,79 @@ Use your existing .divider element as an example to add a new divider after the 
       </div>
 
 
+<!-- Step 41
+Give the .divider selector a clear property set to right. 
+This will clear the float property, pushing the divider and any following content down below the float text. -->
+
+.divider {
+  border-bottom: 1px solid #888989;
+  margin: 2px 0;
+  clear: right;
+}
+
+
+<!-- Step 42
+After your last .divider element, create a p element and give it the text Total Fat 8g 10%. 
+Wrap Total Fat in a span element with the class set to bold. Wrap 10% in another span element with the class set to bold right. -->
+
+<p>
+  <span class="bold">Total Fat</span> 8g <span class="bold right">10%</span>
+</p>
+
+
+<!-- Step 43
+Below your element with the Total Fat text, create a new p element with the text Saturated Fat 1g 5%.
+Wrap the 5% in a span with the class attribute set to bold right. -->
+
+<p>Saturated Fat 1g<span class="bold right">5%</span></p>
+
+
+<!-- Step 44
+This new p element will need to be indented. Give it a class set to indent. -->
+
+<p class="indent">Saturated Fat 1g <span class="bold right">5%</span></p>
+
+
+<!-- Step 45
+Create a new .indent selector and give it a margin-left property set to 1em. -->
+
+.indent {
+  margin-left: 1em;
+}
+
+
+<!-- Step 46
+Create a .daily-value p selector to target all of your p elements in the daily-value section. Give this new selector a border-bottom set to 1px solid #888989. -->
+
+.daily-value p {
+  border-bottom: 1px solid #888989;
+}
+
+
+<!-- Step 47
+The bottom borders under your % Daily Value * and Saturated Fat 1g 5% elements do not extend the full width of the label. 
+Add no-divider to the class for these two elements. -->
+
+      <div class="daily-value sm-text">
+        <p class="right bold no-divider">% Daily Value *</p>
+        <div class="divider"></div>
+        <p><span class="bold">Total Fat</span> 8g<span class="bold right">10%</span></p>
+        <p class="indent no-divider">Saturated Fat 1g <span class="bold right">5%</span></p>
+      </div>
+
+
+<!-- Step 48
+The :not pseudo-selector can be used to select all elements that do not match the given CSS rule.
+
+div:not(#example) {
+  color: red;
+}
+The above selects all div elements without an id of example.
+
+Modify your .daily-value p selector to exclude the .no-divider elements. -->
+
+.daily-value p:not(.no-divider) {
+  border-bottom: 1px solid #888989;
+}
+
+
