--- a/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/2 Typography.html
+++ b/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/2 Typography.html
@@ -225,3 +225,15 @@ Modify your .daily-value p selector to exclude the .no-divider elements. -->
 }
 
 
+<!-- Step 49
+Now you will have to add separate dividers below your .no-divider elements.
+
+Your first .no-divider element has a .divider after it. Create another .divider after your second .no-divider element. -->
+
+        <p class="right bold no-divider">% Daily Value *</p>
+        <div class="divider"></div>
+        <p><span class="bold">Total Fat</span> 8g<span class="bold right">10%</span></p>
+        <p class="indent no-divider">Saturated Fat 1g <span class="bold right">5%</span></p>
+        <div class="divider"></div>
+
+
