--- a/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/3 Typography.html
+++ b/Responsive Web Design(NEW)/7 Typography by Building a Nutrition Label/3 Typography.html
@@ -10,3 +10,39 @@ Italicize the word Trans by wrapping it in an i element. Give the new p element 
         <p class ="indent no-divider"><i>Trans</i> Fat 0g</p>
 
 
+<!-- Step 51
+Create another .divider after your last p element. -->
+
+        <p class="indent no-divider"><i>Trans</i> Fat 0g</p>
+        <div class="divider"></div>
+
+
+<!-- Step 52
+After your last .divider, create a new p element with the text Cholesterol 0mg 0%. Wrap the text Cholesterol in a span element, 
+and give that span element the class attribute set to bold. Wrap the text 0% in another span element, with the class set to bold right. -->
+
+<p class="indent no-divider"><span class="bold">Cholesterol</span> 0mg <span class="bold right">0%</span></p>
+
+
+<!-- Step 53
+Below your last p element, create another p element with the text Sodium 160mg 7%. 
+Wrap the text Sodium in a span element with a class attribute set to bold. Wrap the 7% text in another span element with the class set to bold right. -->
+
+<p><span class="bold">Sodium</span> 160mg <span class="bold right">7%</span></p>
+
+
+<!-- Step 54
+Add another p element with the text Total Carbohydrate 37g 13%. 
+Like before, use span elements to make the text Total Carbohydrate bold, and the text 13% bold and right aligned. -->
+
+<p><span class="bold">Total Carbohydrate</span> 37g<span class="bold right">13%</span></p>
+
+
+<!-- Step 55
+Below your last p element, add another p element with the text Dietary Fiber 4g. 
+Give the p element the class necessary to indent it and remove the dividing border. Then create a divider below that p element. -->
+
+<p class="indent no-divider"><span class="bold">Dietary Fiber</span> 4g </p>
+<div class="divider"></div>
+
+
