--- a/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/1 Building a Quiz.html
+++ b/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/1 Building a Quiz.html
@@ -14,3 +14,52 @@ Start this accessibility journey by providing a lang attribute to your html elem
 </html>
 
 
+<!-- Step 2
+You may be familiar with the meta element already; it is used to specify information about the page, such as the title, description, keywords, and author.
+Give your page a meta element with an appropriate charset value.
+The charset attribute specifies the character encoding of the page, and, nowadays, UTF-8 is the only encoding supported by most browsers. -->
+
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+  </head>
+
+
+<!-- Step 3
+Continuing with the meta elements, a viewport definition tells the browser how to render the page. 
+Including one betters visual accessibility on mobile, and improves SEO (search engine optimization).
+Add a viewport definition with a content attribute detailing the width and initial-scale of the page. -->
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport"content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+
+<!-- Step 4
+Another important meta element for accessibility and SEO is the description definition. 
+The value of the content attribute is used by search engines to provide a description of your page.
+Add a meta element with the name attribute set to description, and give it a useful content attribute. -->
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="quiz page" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+
+<!-- Step 5
+Lastly in the head, the title element is useful for screen readers to understand the content of a page. Furthermore, it is an important part of SEO.
+Give your page a title that is descriptive and concise. -->
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="freeCodeCamp Accessibility Quiz practice project" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Accessibility Quiz practice project</title>
+  </head>
+
+
