--- a/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/1 Building a Quiz.html
+++ b/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/1 Building a Quiz.html
@@ -265,3 +265,82 @@ Then, link the input elements to the corresponding label elements. -->
         </section>
 
 
+<!-- Step 21
+Keeping in mind best-practices for form inputs, give each input an appropriate type and name attribute. Then, give the first input a placeholder attribute. -->
+
+        <section role="region" aria-labelledby="student-info">
+          <h2 id="student-info">Student Info</h2>
+          <div class="info">
+            <label for="student-name">Name:</label>
+            <input id="student-name" type="text" name="name" placeholder="Enter your name..." />
+          </div>
+          <div class="info">
+            <label for="student-email">Email:</label>
+            <input id="student-email" type="email" name="email" />
+          </div>
+          <div class="info">
+            <label for="birth-date">D.O.B.:</label>
+            <input id="birth-date" type="date" name="birth-date" />
+          </div>
+        </section>
+
+
+<!-- Step 22
+Even though you added a placeholder to the first input element in the previous lesson, this is actually not a best-practice for accessibility; 
+too often, users confuse the placeholder text with an actual input value - they think there is already a value in the input.
+Remove the placeholder text from the first input element, relying on the label being the best-practice. -->
+
+          <div class="info">
+            <label for="student-name">Name:</label>
+            <input type="text" name="student-name" id="student-name" />
+          </div>
+
+
+<!-- Step 23
+Arguably, D.O.B. is not descriptive enough. This is especially true for visually impaired users. 
+One way to get around such an issue, without having to add visible text to the label, is to add text only a screen reader can read.
+Append a span element with a class of sr-only to the current text content of the third label element. -->
+
+          <div class="info">
+            <label for="birth-date">D.O.B.<span class="sr-only"></span></label>
+            <input type="date" name="birth-date" id="birth-date" />
+          </div>
+
+
+<!-- Step 24
+Within the span element, add the text (Date of Birth). -->
+
+          <div class="info">
+            <label for="birth-date">D.O.B.<span class="sr-only">(Date of Birth)</span></label>
+            <input type="date" name="birth-date" id="birth-date" />
+          </div>
+
+
+<!-- Step 25
+The .sr-only text is still visible. There is a common pattern to visually hide text for only screen readers to read.
+This pattern is to set the following CSS properties:
+
+position: absolute;
+width: 1px;
+height: 1px;
+padding: 0;
+margin: -1px;
+overflow: hidden;
+clip: rect(0, 0, 0, 0);
+white-space: nowrap;
+border: 0;
+Use the above to define the sr-only class. -->
+
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border: 0;
+}
+
+
